--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ body {
 }
 
 .game-container {
-    padding: 0 10px;
+    padding: 0 10%;
     position: relative;
 }
 
@@ -147,6 +147,7 @@ body {
 .game-over-text {
     font-size: 2em;
     text-transform: uppercase;
+    color: #fff;
 }
 
 .game-over-hidden {
