--- a/main.css
+++ b/main.css
@@ -154,13 +154,32 @@ body {
     display: none;
 }
 
+footer {
+    max-width: 420px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.instructions {
+    display: none;
+}
+
+.sign-off {
+    font-size: 0.5rem;
+    text-transform: lowercase;
+    color: #ffffff80;
+}
 
 /* ==== DESKTOP MEDIA QUERY ==== */
 
-@media screen and (min-width: 770px) {
+@media screen and (min-height: 676px) {
 
-    .console-btns {
-        display: none;
+    footer {
+        margin: 50px auto 0;
+    }
+
+    .instructions {
+        display: block;
     }
 
 }
